--- a/frontend/src/components/parishAdmin/adminDashboardSummary/AdminDashboardSummary.scss
+++ b/frontend/src/components/parishAdmin/adminDashboardSummary/AdminDashboardSummary.scss
@@ -6,7 +6,7 @@
   padding: 2rem;
 
   .admin-dashboard-summary-title {
-    @include subTitle;
+    @include title;
     font-size: $aafs;
     text-align: center;
   }
