--- a/frontend/src/components/parishAdmin/eventDetails/EventInfos.scss
+++ b/frontend/src/components/parishAdmin/eventDetails/EventInfos.scss
@@ -1,51 +1,107 @@
 @import "../../../styles/variables.scss";
 @import "../../../styles/mixins.scss";
 
-.event-infos-wrapper {
-  @include shadow1;
-  background-color: $form-bg;
+.events-information-container {
+  position: relative;
+  margin-bottom: 1rem;
 
-  .event-title {
+  .event-information-title {
     @include subTitle;
-    padding: 0.1rem;
-    font-size: $afs;
+    font-size: $aafs;
   }
 
-  .event-status {
-    font-size: $nfs;
-    @include twoGridTemplateEqualColumns;
-    row-gap: 0.3rem;
-    column-gap: 1rem;
+  .event-year-form {
+    position: absolute;
+    top: 1rem;
+    right: 0;
 
-    strong {
-      font-size: $nfs;
-      font-weight: $afw;
+    .input-field {
+      @include inputWithButton;
     }
 
-    span {
-      display: inline-block;
-      width: 10rem;
-      padding: 0.2rem 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      background-color: #f9f9f9;
-      font-family: inherit;
-      font-size: 1rem;
-      color: #333;
-      box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-      margin-left: 5px;
+    .year-form-btn {
+      @include buttonWithInput;
     }
   }
 
-  .event-link {
-    font-size: $nfs;
-    margin: 0.6rem 0;
+  .event-infos-wrapper {
+    @include shadow1;
+    background-color: $form-bg;
 
-    .view {
-      font-size: $nfs;
-      color: $blue;
-      border: none;
-      cursor: pointer;
+    .event-title {
+      @include subTitle;
+      padding: 0.1rem;
+      font-size: $afs;
+    }
+
+    .event-box {
+      @include twoGridTemplateEqualColumns;
+      column-gap: 1rem;
+
+      .left-event-box {
+        @include shadow1;
+        padding: 1rem 2rem;
+
+        .event-status {
+          font-size: $nfs;
+          @include twoGridTemplateEqualColumns;
+          row-gap: 0.3rem;
+          column-gap: 1rem;
+
+          .span {
+            display: inline-block;
+            width: 15rem;
+            padding: 0.2rem 0.5rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f9f9f9;
+            font-family: inherit;
+            font-size: 1rem;
+            color: #333;
+            box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+            margin-left: 5px;
+          }
+        }
+
+        .event-link {
+          font-size: $nfs;
+          margin: 0.6rem 0;
+
+          .view {
+            font-size: $nfs;
+            color: $blue;
+            border: none;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .right-event-box {
+        @include shadow1;
+        @include flexColumn;
+
+        .event-facilitators-list {
+          .event-facilitator {
+            font-size: $nfs;
+            @include twoGridTemplateEqualColumns;
+            row-gap: 0.3rem;
+            column-gap: 1rem;
+            .facilitator {
+              display: inline-block;
+              width: 15rem;
+              padding: 0.2rem 0.5rem;
+              border: 1px solid #ccc;
+              border-radius: 4px;
+              background-color: #f9f9f9;
+              font-family: inherit;
+              font-size: 1rem;
+              color: #333;
+              box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+              margin-left: 5px;
+            }
+          }
+        }
+      }
     }
   }
 }
