--- a/frontend/src/components/parishAdmin/servicesInfos/ServicesInfos.scss
+++ b/frontend/src/components/parishAdmin/servicesInfos/ServicesInfos.scss
@@ -2,11 +2,26 @@
 @import "../../../styles/mixins.scss";
 
 .services-information-container {
+  position: relative;
   margin: 2rem 0;
 
   .services-information-title {
     @include subTitle;
     font-size: $aafs;
+  }
+
+  .services-year-form {
+    position: absolute;
+    top: 1rem;
+    right: 0;
+
+    .input-field {
+      @include inputWithButton;
+    }
+
+    .year-form-btn {
+      @include buttonWithInput;
+    }
   }
 
   .services-infos-wrapper {
@@ -51,7 +66,7 @@
   
       .more-infos {
         font-size: $nfs;
-        margin: 0.6rem 0;
+        margin: 1.5rem 0 0.6rem 0;
   
         .view {
           font-size: $nfs;
