--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -43,12 +43,13 @@ $copyright-bg: #4a4e69;
 $button-bg: #007bff;
 $edit-bg: #ebebf8;
 $userSidebar-bg: #e9ecef;
-$sidebar-bg: #dee2e6;
+$sidebar-bg: #e9ecef;
 $google-button-bg: #d6ebfc;
 $tab-bg: #edf0f3;
 $modal-bg: #dee2e6d7;
 $value-bg: #e9ecef;
 $form-bg: #e9ecef;
+$chart-bg: #dbe4ee75;
 
 // Hover
 $userSidebar-hover: #e4c7f9;
