--- a/frontend/src/components/forms/memberContribution/AddContribution.scss
+++ b/frontend/src/components/forms/memberContribution/AddContribution.scss
@@ -42,7 +42,7 @@
       }
 
       .add-member-contribution-btn {
-        @include buttonWithInput;
+        @include button3;
       }
     }
   }
