--- a/frontend/src/components/bishopsSlider/Bishops.scss
+++ b/frontend/src/components/bishopsSlider/Bishops.scss
@@ -66,7 +66,7 @@
 
   .shepherd-info {
     position: absolute;
-    right: -9%;
+    right: -15%;
     top: 50%;
     opacity: 0;
     width: 40%;
@@ -95,10 +95,9 @@
     position: absolute;
     top: 0px;
     left: 0%;
-    width: 23%;
+    width: 25%;
     height: 2px;
     background: #ff00ff;
-
     animation: span1 3s linear infinite;
   }
 
@@ -116,7 +115,7 @@
     content: "";
     position: absolute;
     top: 0%;
-    left: 0%;
+    right: 0%;
     width: 2px;
     height: 25%;
     background: #ff00ff;
@@ -126,7 +125,7 @@
     content: "";
     position: absolute;
     bottom: 0%;
-    right: 0;
+    left: 0;
     width: 2px;
     height: 25%;
     background: #ff00ff;
@@ -185,7 +184,7 @@
 
   100% {
     visibility: visible;
-    top: 12rem;
+    top: 50%;
     background-color: #cae9ff;
   }
 }
