--- a/frontend/src/components/video/LastVideo.scss
+++ b/frontend/src/components/video/LastVideo.scss
@@ -2,20 +2,22 @@
 @import "../../styles/variables.scss";
 
 .video-preview-container {
+  @include shadow1;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
   grid-template-areas:
     "title title"
     "video description ";
-  margin-top: 2rem;
+  margin-top: 3rem;
+
 }
 
 .video-preview-title {
   grid-area: title;
-  font-size: 24px;
+  font-size: $aafs;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 
 .video-wrapper {
@@ -60,31 +62,12 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  animation: spin 1s linear infinite;
   margin: 20px auto;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@media (max-width: 768px) {
-  .video-wrapper {
-    max-width: 100%;
-  }
-
-  .video-preview-title {
-    font-size: 20px;
-  }
 }
 
 .video-description {
   grid-area: description;
   @include paragraph;
-  margin-top: 20px;
+
+ line-height: 2rem;
 }
