--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -443,7 +443,10 @@
 // Loader styling
 // ==============================================================================================
 @mixin loader {
-  @include flexCenter;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
   gap: 0.5rem;
 }
 
