--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -162,6 +162,11 @@
   color: white;
   cursor: pointer;
 }
+
+@mixin formInputError {
+  color: $red;
+  font-size: $nfs;
+}
 // ==============================================================================================
 // Button styling
 // ==============================================================================================
