--- a/frontend/src/components/video/LastVideo.scss
+++ b/frontend/src/components/video/LastVideo.scss
@@ -8,22 +8,22 @@
   column-gap: 1rem;
   grid-template-areas:
     "title title"
-    "video description ";
+    "description video";
   margin-top: 3rem;
-
 }
 
 .video-preview-title {
   grid-area: title;
   font-size: $aafs;
   font-weight: bold;
-  margin-bottom: 1rem;
+  padding: 0.5rem;
 }
 
 .video-wrapper {
   grid-area: video;
   position: relative;
   width: 100%;
+  height: fit-content;
   object-fit: cover;
   margin: 0 auto;
   border-radius: 10px;
@@ -33,6 +33,8 @@
 
 .video {
   width: 100%;
+
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -68,6 +70,8 @@
 .video-description {
   grid-area: description;
   @include paragraph;
-
- line-height: 2rem;
+  line-height: 1.8rem;
+  height: fit-content;
 }
+
+
