--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -50,6 +50,8 @@ $modal-bg: #dee2e6d7;
 $value-bg: #e9ecef;
 $form-bg: #e9ecef;
 $chart-bg: #dbe4ee75;
+$delete-bg: #d32f2f;
+$cancel-bg: #f0f0f0;
 
 // Hover
 $userSidebar-hover: #e4c7f9;
@@ -57,6 +59,8 @@ $sidebar-hover: #e9ecef;
 $google-button-hover: #bedcf5;
 $tab-hover: #d5e6f4;
 $button-hover: #0056b3;
+$delete-bg-hover: #b71c1c;
+$cancel-bg-hover: #e0e0e0;
 
 // padding
 $buttonPadding: 0.2rem;
