--- a/frontend/src/styles/Mixins.scss
+++ b/frontend/src/styles/Mixins.scss
@@ -269,6 +269,48 @@
   }
 }
 
+@mixin buttonForDelete {
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  background-color: #d32f2f;
+  color: #fff;
+  border: none;
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.7;
+  }
+
+  &:hover:not(:disabled) {
+    background-color: #b71c1c;
+  }
+}
+
+@mixin buttonForCancel {
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  background-color: #ccdbfd;
+  color: #333;
+  border: none;
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.7;
+  }
+
+  &:hover {
+    background-color: #c1d3fe;
+  }
+}
+
 // ==============================================================================================
 // tab styling
 // ==============================================================================================
@@ -418,6 +460,20 @@
   &:hover {
     color: $tomato;
   }
+}
+
+@mixin ModalForConfirmation {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  @include shadow1;
+  width: 20rem;
+  padding: $afs;
+  background-color: #edf2fb;
+  border-radius: 8px;
+  z-index: 1000;
+  text-align: center;
 }
 
 // ==============================================================================================
