--- a/frontend/src/components/user/changePassword/UserChangePassword.scss
+++ b/frontend/src/components/user/changePassword/UserChangePassword.scss
@@ -5,6 +5,8 @@
   width: 50%;
   margin: 1rem auto;
   @include shadow2;
+  background-color: $form-bg;
+  padding: 1rem 2rem;
 
   .user-change-password-title {
     @include subTitle;
@@ -33,6 +35,7 @@
 
       .password-display {
         @include passwordDisplay;
+        font-size: $nfs;
       }
 
       .input-field:focus + .input-label {
@@ -46,11 +49,11 @@
       }
     }
 
-    .user-change-password-btn {
-      @include button1;
+    .reset-password-wrapper {
+      margin: 1rem 0;
 
-      .loading {
-        @include loader;
+      .user-change-password-btn {
+        @include button3;
       }
     }
   }
