--- a/frontend/src/styles/Variables.scss
+++ b/frontend/src/styles/Variables.scss
@@ -40,7 +40,7 @@ $section-bg: #ebf2fa;
 $aside-bg: #f0f8ff;
 $footer-bg: #2b2d42;
 $copyright-bg: #4a4e69;
-$button-bg: #007bff;
+$button-bg: #2973c2;
 $edit-bg: #ebebf8;
 $userSidebar-bg: #e9ecef;
 $sidebar-bg: #e9ecef;
