--- a/frontend/src/components/parishAdmin/delegations/Delegations.scss
+++ b/frontend/src/components/parishAdmin/delegations/Delegations.scss
@@ -1,11 +1,12 @@
-@import '../../../styles/Variables.scss';
-@import '../../../styles/Mixins.scss';
+@import "../../../styles/Variables.scss";
+@import "../../../styles/Mixins.scss";
 
-.delegated-priests-wrapper{
+.delegated-priests-wrapper {
   width: $laptop;
   margin: 1rem auto;
 
-  .delegated-priests {
+  .delegated-priests-title {
     @include subTitle;
+    margin: 2rem 0;
   }
 }
