--- a/frontend/src/components/parishAdmin/events/Events.scss
+++ b/frontend/src/components/parishAdmin/events/Events.scss
@@ -5,8 +5,9 @@
   width: $laptop;
   margin: 2rem auto;
 
-  .events-section-title {
+  .events-list-title {
     @include subTitle;
+    margin: 3rem 0 1.5rem 0;
   }
 
   .event-delete-confirmation-wrapper {
