--- a/frontend/src/components/forms/serviceCategory/CategoryForm.scss
+++ b/frontend/src/components/forms/serviceCategory/CategoryForm.scss
@@ -25,7 +25,9 @@
       }
 
       .input-container {
-        @include inputContainer;
+        position: relative;
+        display: flex;
+        flex-direction: column;
 
         .input-icon {
           @include inputIcon;
@@ -49,6 +51,12 @@
 
         .input-field:focus + .input-label + .input-highlight {
           width: 100%;
+        }
+
+        .error-text {
+          color: $red;
+          font-size: $sfs;
+          margin: 0.5rem 0 0 0.4rem;
         }
       }
 
